src/app/components/app.css
*{
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  display: flex;
  flex: 1;
  min-height: 100vh;
  flex-direction: row;
  font-family: 'Prociono', serif;
  font-size: 1.5vw;
  line-height: 2;
}

header {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  align-items: stretch;
}


footer {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  align-items: stretch;
}

img {
  width: 20%;
  border-bottom: 2px solid gray;
  border-top: 2px solid gray;
}

a {
  outline: none;
  text-decoration: none;
}

.nav {
  display: flex;
  justify-content: space-around;
  font-size: 1em;
}

.nav li {
  list-style: none;
  display: inline;
  padding: 5em;
  margin: 2em;
  font-weight: bold;
}

.main {
  display: flex;
  flex: 1;
  justify-content: space-around;
  padding: 1em;
}

.body {
  width: 80%;
  padding-left: 2em;
}

.sidebar {
  width: 15%;
}

.search {
  display: flex;
  flex-direction: column;
}

